<resources>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="Language">Language</string>
    <string name="Your_opinion_matter_to_us">Your Opinion Matter To Us!</string>
    <string name="we_d_greatly_appreciate_if_you_can_rate_us">If you enjoy this %s, would you mind rating us on the Google Play, then?</string>
    <string name="may_be_later">Not now</string>
    <string name="thank_u">Thank you!</string>
    <string name="rate">Rate</string>
    <string name="please_give_rating">Please give me a rating!</string>
    <string name="this_is_item_sample">This is item sample!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="text_permission">This app needs permissions below to work properly</string>
    <string name="tv_continue">Continue</string>
    <string name="allow_access">Allow access</string>
    <string name="desc_dialog_warning_permission">You must allow all Permission to use this app with full feature.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="word" translatable="false">Word</string>
    <string name="excel" translatable="false">Excel</string>
    <string name="ppt" translatable="false">PPT</string>
    <string name="pdf" translatable="false">PDF</string>
    <string name="title_intro_1">Color It Your Way</string>
    <string name="content_intro_1">Relax your mind by coloring beautiful illustrations with one simple tap.</string>
    <string name="title_intro_2">Draw with AR Magic</string>
    <string name="content_intro_2">Freely sketch your ideas with simple, intuitive drawing tools.</string>
    <string name="title_intro_3">Themes for Every Mood</string>
    <string name="content_intro_3">Browse a variety of themes to suit your mood and coloring style.</string>
    <string name="title_intro_4">Explore Color Palettes</string>
    <string name="content_intro_4">Choose from vibrant color palettes to match your creative expression.</string>
    <string name="please_select_language_to_continue">Please select language to continue</string>
    <string name="start">Start</string>
    <string name="no_internet">No Internet</string>
    <string name="loading">Loading</string>
    <string name="try_again">Try again</string>
    <string name="what_problems_do_you_encounter_during_use">What problems do you encounter during use?</string>
    <string name="not_much_more_useful_than_the_default_features">Not much more useful than the default features</string>
    <string name="explore">Explore</string>
    <string name="unresponsive_or_laggy">Unresponsive or Laggy</string>
    <string name="why_did_you_uninstall_the_app">Why did you\nuninstall the app?</string>
    <string name="difficult_to_use">Difficult to use</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="error_not_working">Error Not Working</string>
    <string name="fast_battery_drain">Fast battery drain</string>
    <string name="others">Others</string>
    <string name="don_t_uninstall_yet">Don’t uninstall yet</string>
    <string name="still_want_to_uninstall">Still want to uninstall</string>
    <string name="uninstall">Uninstall</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_the_reason_why_you_uninstall_the_app_here">Please enter the reason why you uninstall the app here</string>
    <string name="thank_you_for_choosing_us">Thank you for choosing us</string>
    <string name="skip">Skip</string>
    <string name="storage">Storage</string>
    <string name="share">Share</string>
    <string name="animal">Animal</string>
    <string name="alphabet">Alphabet</string>
    <string name="numbers">Numbers</string>
    <string name="flower">Flower</string>
    <string name="anime">Anime</string>
    <string name="toys">Toys</string>
    <string name="fruits">Fruits</string>
    <string name="birds">Birds</string>
    <string name="cartoons">Cartoons</string>
    <string name="interest">Interest</string>
    <string name="please_choose_at_least_two_of_your_hobbies">Please choose at least two of your hobbies.</string>
    <string name="color_palette">Color Palette</string>
    <string name="choose_your_favorite_colors_to_get_started">Choose your favorite colors to get started.</string>
    <string name="basic">Basic</string>
    <string name="skin_tone">Skintone</string>
    <string name="rainbow">Rainbow</string>
    <string name="pastel">Pastel</string>
    <string name="cool_tone">Cool tone</string>
    <string name="warm_tone">Warm tone</string>
    <string name="neutral">Neutral</string>
    <string name="lip">Lip</string>
    <string name="hair">Hair</string>
    <string name="coloring">Coloring</string>
    <string name="my_creation">My Creation</string>
    <string name="settings">Settings</string>
    <string name="paint_amp"><![CDATA[Paint &]]></string>
    <string name="create_image">Create Image</string>
    <string name="see_all">See all</string>
    <string name="trending">Trending</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="paint_brush">Paint brush</string>
    <string name="pencil">Pencil</string>
    <string name="fill">Fill</string>
    <string name="brush">Brush</string>
    <string name="big_brush">Big Brush</string>
    <string name="eraser">Eraser</string>
    <string name="spray">Spray</string>
    <string name="marker">Marker</string>
    <string name="tech_pen">Tech Pen</string>
    <string name="more">More</string>
    <string name="color_palettes">Color Palettes</string>
    <string name="custom">Custom</string>
    <string name="plain">Plain</string>
    <string name="add">+ Add</string>
    <string name="recent">Recent</string>
    <string name="custom_your_palette">Custom your palette</string>
    <string name="name_your_palette">Name your palette</string>
    <string name="enter_your_name_palette">Enter your name palette</string>
    <string name="select_text_color">Select text color</string>
    <string name="please_select_at_least_1_color">Please select at least 1 color</string>
    <string name="please_enter_your_name_palette">Please enter your name palette</string>
    <string name="save_image_successfully">Save image successfully</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="great_job">Great job!</string>
    <string name="your_artwork_has_been_saved_stay_creative_and_keep_shining">Your artwork has been saved. Stay creative and keep shining!</string>
    <string name="explore_more">Explore More</string>
    <string name="download">Download</string>
    <string name="sketch">Sketch</string>
    <string name="download_image_successfully">Download image successfully</string>
    <string name="failed_to_download_image">Failed to download image</string>
    <string name="failed_to_share_image">Failed to share image</string>
    <string name="tutorial">Tutorial</string>
    <string name="draw_with_camera">Draw with camera</string>
    <string name="stabilize_your_phone_with_a_tripod_glass_or_stacked_books_while_drawing">Stabilize your phone with a tripod, glass, or stacked books while drawing.</string>
    <string name="remove_background">Remove background</string>
    <string name="do_you_want_to_remove_the_background_of_the_pattern">Do you want to remove the background of the pattern?</string>
    <string name="remove">Remove</string>
    <string name="no_thanks">No, Thanks!</string>
    <string name="draw_using_templates">Draw using Templates</string>
    <string name="flip">Flip</string>
    <string name="lock">Lock</string>
    <string name="choose_section_to_add">Choose Section to Add</string>
    <string name="select_the_part_you_want_to_include_bmi_or_weight_tracking">Select the part you want to include: BMI or Weight tracking.</string>
    <string name="ar_drawing">AR Drawing</string>
    <string name="record">Record</string>
    <string name="opacity">Opacity</string>
    <string name="flash">Flash</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="oops_nothing_here">Oops, nothing here!</string>
    <string name="your_gallery_is_feeling_lonely_nstart_create_something_now">Your gallery is feeling lonely.\nStart create something now!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back_to_home">Back to home</string>
    <string name="oops_your_gallery_s_feeling_a_bit_lonely">Oops, your gallery\'s feeling a bit lonely!</string>
    <string name="let_s_fill_it_up_start_creating_something_awesome">Let\'s fill it up—start creating something awesome!</string>
    <string name="video_saved">Video saved</string>
    <string name="clear_drawing">Clear Drawing!</string>
    <string name="are_you_sure_any_changes_made_to_the_drawing_will_be_lost">Are you sure? Any changes made to the drawing will be lost.</string>
    <string name="clear">Clear</string>
    <string name="warning">Warning</string>
    <string name="if_you_leave_now_all_unsaved_edits_will_be_lost_are_you_sure_you_want_to_exit">If you leave now, all unsaved edits will be lost. Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="importing_an_image_from_the_gallery_will_erase_your_current_drawing_do_you_want_to_continue">Importing an image from the gallery will erase your current drawing. Do you want to continue?</string>
    <string name="tv_import">Import</string>
    <string name="select_the_part_you_want_to_include_coloring_or_sketch">Select the part you want to include: Coloring or Sketch</string>
    <string name="exit_app">Exit app?</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="delete_image_successfully">Delete file successfully</string>
    <string name="failed_to_delete_image">Failed to delete file</string>
    <string name="there_is_no_internet_connection_nplease_check_your_internet_connection">There is no internet connection!\nPlease check your internet connection!</string>
    <string name="delete_dialog">Delete!</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove?</string>
    <string name="delete_palettes">Delete Palettes!</string>
    <string name="are_you_sure_any_changes_made_to_the_palettes_will_be_lost">Are you sure? Any changes made to the palettes will be lost.</string>
    <string name="get_start_now">Get start now</string>
    <string name="new_update_available">🚀 New Update Available!</string>
    <string name="upgrade_now_for_a_smoother_experience_bug_fixes_for_better_performance">Upgrade now for a smoother experience, bug fixes for better performance. ⚡</string>
    <string name="update_now">Update Now</string>
    <string name="no">No</string>
    <string name="update_application_fail">Update application fail!</string>
    <string name="update_application_success">Update application success!</string>
    <string name="request_update_application_fail">Request update application fail!</string>
    <string name="can_t_update_scores_check_your_internet_connection">Can’t update scores – check your internet connection!</string>
    <string name="unlock_download_items">Unlock download items</string>
    <string name="become_a_vip_or_watch_ads_to_unlock_for_free">Become a VIP or watch ads to unlock for free</string>
    <string name="watch_video">Watch Video</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have">You have</string>
    <string name="unlocked">unlocked</string>
    <string name="all_animations">all animations</string>
    <string name="ok">OK</string>
</resources>