<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/bg_dialog_white"
    android:orientation="vertical"
    android:gravity="center">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/fr_ads" />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_clean_enable"
        android:layout_marginBottom="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_drawing"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure_any_changes_made_to_the_drawing_will_be_lost"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/cancel"
            android:background="@drawable/bg_tv_no"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#3A3A3C"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/clear"
            android:background="@drawable/bg_tv_red"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>