<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp">
    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:background="@drawable/view_tab_app_color"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/fr_ads" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="4dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit_the_app"
        android:layout_marginEnd="24dp"
        android:textColor="#717171"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginBottom="24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/exit"
            android:background="@drawable/bg_tv_cancel_exit_app"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="#3A3A3C"
            android:layout_marginEnd="16dp"/>
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="44dp"
            android:text="@string/cancel"
            android:background="@drawable/bg_tv_exit_app"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>