<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="18dp">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back_black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_problems_do_you_encounter_during_use"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_item_answer"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/not_much_more_useful_than_the_default_features"
            android:layout_marginStart="16dp"
            android:textColor="@color/color_700"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            />
        <TextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/explore"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_app_gradient"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="22dp"
            android:gravity="center"
            android:ellipsize="end"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_item_answer"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/unresponsive_or_laggy"
            android:layout_marginStart="16dp"
            android:textColor="@color/color_700"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            />
        <TextView
            android:id="@+id/tv_try_again"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:background="@drawable/bg_btn_app_gradient"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="22dp"
            android:gravity="center"
            android:ellipsize="end"
            />
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/no_uninstall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/don_t_uninstall_yet"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_btn_app_gradient"
        android:paddingHorizontal="22dp"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:id="@+id/still_uninstall"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/still_want_to_uninstall"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:background="@drawable/bg_transparent_stroke_app_color"
        android:fontFamily="@font/poppins_semibold"
        android:layout_gravity="center_vertical"
        android:paddingHorizontal="22dp"
        android:gravity="center"
        android:ellipsize="end"
        android:layout_marginBottom="16dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fr_ads" />
</LinearLayout>